--- a/infrastructure/api-gateway/build.gradle
+++ b/infrastructure/api-gateway/build.gradle
@@ -1,29 +1,14 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '4.0.1'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot'
 }
 
-group = 'com.furnicraft'
-version = '0.0.1-SNAPSHOT'
-description = 'api-gateway'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
+bootJar {
+    enabled = true
 }
