--- a/infrastructure/eureka-server/src/main/resources/application.yml
+++ b/infrastructure/eureka-server/src/main/resources/application.yml
@@ -3,11 +3,11 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    prefer-ip-address: true
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8761/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 0
