--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -2,15 +2,15 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: api-gateway
   cloud:
     gateway:
-      server:
-        webflux:
-          routes:
-            - id: auth-service
-              uri: lb://auth-service
-              predicates:
-                - Path=/api/v1/auth/**
+      routes:
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/api/v1/auth/**
 
 eureka:
   instance:
