--- a/infrastructure/eureka-server/src/main/resources/application.yml
+++ b/infrastructure/eureka-server/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 server:
   port: 8761
 
+spring:
+  application:
+    name: eureka-server
+
 eureka:
   instance:
-    prefer-ip-address: true
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-  server:
-    wait-time-in-ms-when-sync-empty: 0
+      defaultZone: https://${eureka.instance.hostname}:${server.port}/eureka/
