--- a/services/auth-service/build.gradle
+++ b/services/auth-service/build.gradle
@@ -3,6 +3,8 @@ plugins {
 }
 
 dependencies {
+    implementation project(':shared:common')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
