--- a/shared/common/build.gradle
+++ b/shared/common/build.gradle
@@ -8,6 +8,9 @@ dependencies {
 
     api 'org.springframework.boot:spring-boot-starter-web'
     api 'org.springframework.boot:spring-boot-starter-validation'
+
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 jar {
