feat: implement Redis-based logout and token blacklisting
- Configure RedisTemplate for token storage
- Add logout logic to AuthenticationService with TTL support
- Update JwtAuthenticationFilter to intercept blacklisted tokens
- Add logout endpoint to AuthenticationController

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,20 @@ services:
     networks:
       - furnicraft_network
 
+  redis:
+    image: redis:8.4.0-alpine
+    container_name: furnicraft-redis
+    ports:
+      - "6379:6379"
+    networks:
+      - furnicraft_network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+
 networks:
   furnicraft_network:
     driver: bridge
