--- a/services/auth-service/src/main/resources/application.yml
+++ b/services/auth-service/src/main/resources/application.yml
@@ -30,6 +30,11 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yml
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 application:
   security:
     jwt:
